# metabolism

./: .gitignore  README.md  pyproject.toml
quarto/: _quarto.yml  mkd.qmd
quarto/_output/: mkd.ipynb
quarto/_output/colloquiums/colloquium_3/: exercise_1_pde.ipynb  exercise_2_pp1.ipynb  exercise_3_gsd.ipynb  exercise_4_atgl.ipynb  exercise_5_mm-coa.ipynb  exercise_6_acc.ipynb
quarto/_output/colloquiums/colloquium_6/: exercise_1_calmodulin.ipynb  exercise_2_insulin.ipynb  exercise_3_ethanol.ipynb  exercise_4_aterosklerose.ipynb  exercise_5_apolipoprotein.ipynb  exercise_6_glp1.ipynb
quarto/colloquiums/colloquium_3/: _assignment_list.md  colloquium_3.docx  exercise_1_pde.qmd  exercise_2_pp1.qmd  exercise_3_gsd.qmd  exercise_4_atgl.qmd  exercise_5_mm-coa.qmd  exercise_6_acc.qmd
quarto/colloquiums/colloquium_3/scripts/: acc_kode.py  atgl_kode.py  gsd_kode.py  mm-coa_kode.py  pde_kode.py  pp1_kode.py
quarto/colloquiums/colloquium_6/: _assignment_list.md  colloquium_6.docx  exercise_1_calmodulin.qmd  exercise_2_insulin.qmd  exercise_3_ethanol.qmd  exercise_4_aterosklerose.qmd  exercise_5_apolipoprotein.qmd  exercise_6_glp1.qmd
quarto/colloquiums/colloquium_6/scripts/: apolipoprotein_kode_v2.py  aterosklerose_kode_v2.py  calmodulin_kode.py  ethanol_kode.py  glp1_kode.py  insulin_kode.py
